--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF--8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gemini Code Reviewer</title>
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://aistudiocdn.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src 'self' https://fonts.gstatic.com;
+      connect-src 'self' https://generativelanguage.googleapis.com https://aistudiocdn.com;
+      img-src 'self' data: https:;
+    ">
+    <title>The Code Reviewer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
